# ropfilter

./: .gitignore  README.md  pyproject.toml
ropfilter/: __init__.py  __main__.py  cache_sqlite.py  chain.py  classify.py  cli.py  constants.py  debuglog.py  file.json  filters.py  main.py  models.py  output.py  parsing.py  popmap.py  ranking.py  regmap.py  solver.py  syntx.json  utils.py
ropfilter/tests/: conftest.py  test_avoid_memref_skip.py  test_chain_ranking_and_stability.py  test_classify.py  test_classify_default_writes.py  test_classify_extended.py  test_classify_more.py  test_filters.py  test_filters_coverage.py  test_filters_integration.py  test_stability_unclassified_writes.py  test_stable_src.py  test_unclassified_parse.py
ropfilter/yamls/: file.yaml  file2.yaml
